<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".ProductPageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--<ImageView
                android:id="@+id/product_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="340dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="32dp"
                android:scaleType="fitCenter"
                android:src="@drawable/oneplus_five"
                android:background="@drawable/product_details_image"
                android:elevation="20dp"
                />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="400dp"
                android:orientation="horizontal"
                tools:layout_height="400dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:paddingStart="24dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="8dp"
                    android:transitionName="image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.08"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:textColor="#DA000000"
                    android:textSize="20sp"
                    android:transitionName="name"
                    android:textAlignment="center"
                    tools:text="Oneplus 5t 64 GB Oneplus 5t 64 GB Oneplus 5t 64 GB" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp">
                    <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/helvetica_neue_heavy"
                        android:textSize="26sp"
                        android:text="$290"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:id="@+id/product_price"
                        android:layout_alignParentTop="true"
                        />

                    <TextView
                        android:id="@+id/store_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/product_price"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="-4dp"
                        android:text="@string/amazon_in"
                        android:textColor="#C6000000"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_price" />

                    <TextView
                        android:id="@+id/original_price"
                        android:layout_width="50dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:text="$500"
                        android:textColor="#B2000000"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toBottomOf="@id/product_price"
                        app:layout_constraintLeft_toRightOf="@id/product_price"
                        app:layout_constraintStart_toEndOf="@+id/product_price"
                        app:layout_constraintTop_toTopOf="@+id/product_price" />

                    <ImageView
                        android:id="@+id/fulfillment"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/original_price"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/amazon_prime"
                        android:layout_marginStart="8dp"/>


                </android.support.constraint.ConstraintLayout>


                <TextView
                    android:id="@+id/delivery_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    tools:text="Delivery to 440022 by Tuesday, 1st May" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/features_and_details"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:paddingStart="8dp"/>

                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="#F5F5F5"
                    android:paddingLeft="15dp"
                    android:paddingTop="12dp"
                    android:paddingRight="15dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:text="\u2022 20MP+16MP primary dual camera and 16MP front facing camera \n
\u2022 15.26 centimeters (6.01-inch) capacitive touchscreen FHD Full Optic AMOLED 18:9 display with 2160 x 1080 pixels resolution. Cover Glass:2.5D Corning Gorilla Glass 5 \n
\u2022 OxygenOS based on Android 7.1.1 Nougat with Qualcomm Snapdragon 835 octa core processor \n
\u2022 6 GB RAM, 64 GB internal memory and dual nano SIM dual-standby (4G+4G) \n
\u2022 3300mAH lithium Polymer battery with Dash Charge technology \n
\u2022 Face Unlock, Fingerprint scanner, all-metal unibody and NFC enabled \n
\u2022 1 year manufacturer warranty for device and in-box accessories including batteries from the date of purchase \n
\u2022 For any product related queries kindly contact brand customer care toll free no:18001028411 \n" />
            </LinearLayout>
        </LinearLayout>

        <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="11"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="4"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="22dp"
                        tools:text="₹50,999"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:fontFamily="@font/titillium_web_semibold"/>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="0dp"
                            tools:text="@string/amazon_in"
                            android:textColor="#000000"
                            android:textSize="17sp"
                            android:textAlignment="center"
                            android:drawableEnd="@drawable/down"
                            android:drawablePadding="4dp"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:paddingEnd="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="5">

                        <ImageView
                            android:id="@+id/product_rating1"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="star"
                            android:src="@drawable/filled_star" />

                        <ImageView
                            android:id="@+id/product_rating2"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/filled_star" />

                        <ImageView
                            android:id="@+id/product_rating3"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/filled_star" />

                        <ImageView
                            android:id="@+id/product_rating4"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/filled_star" />

                        <ImageView
                            android:id="@+id/product_rating5"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/filled_star" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="12013 reviews (from Amazon.in)"
                        android:textColor="#000000" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/product_fulfillment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:src="@drawable/amazon_prime"
                    />

            </LinearLayout>-->

    </ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/add_to_wishlist_button"
            android:contentDescription="@string/add_to_wishlist"
            android:elevation="40dp"
            android:paddingStart="10dp"
            android:paddingTop="12dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/like_empty" />

        <Button
            android:id="@+id/buy_now"
            android:layout_width="152dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/round_corner_view"
            android:elevation="100dp"
            android:shadowColor="@color/black"
            android:stateListAnimator="@null"
            android:text="@string/buy_now"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:elevation="10dp"/>

        <!-- <Button
    android:id="@+id/add_to_wishlist"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/add_to_wishlist_button"
    android:drawableTop="@drawable/like_empty"
    android:textAllCaps="false"
    android:textColor="#FF9800"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toLeftOf="@id/buy_now"
    android:drawablePadding="4dp"/>-->

        />
    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/wait2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DD000000"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/waitforproducttoload"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>